--- a/views/user-page/_user-page.scss
+++ b/views/user-page/_user-page.scss
@@ -64,6 +64,7 @@
         margin-top: 40px;
       }
       .card {
+        margin-top: 10px;
         &:first-child {
           margin-top: 0px;
         }
